jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef void (*AbreCupomCallback) (PCHAR CPF_CNPJ,PCHAR Nome,PCHAR Endereco);


typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef void (*BobinaAdicionaLinhasCallback) (PCHAR linhas,PCHAR operacao);


typedef void (*ChangeEstadoCallback) (int EstadoAnterior,int EstadoAtual);


typedef BOOL (*ChequeEstadoCallback) (int EstadoAtual);


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef struct
{
	char Numero[14];
	int COO_Cupom;
	int COO_Dav;
	char Titulo[31];
	double Valor;
	double DtEmissao;
} DAVsRec;


typedef void (*EfetuaPagamentoCallback) (PCHAR CodFormaPagto,double Valor,PCHAR Observacao,BOOL ImprimeVinculado);


typedef void (*FechaCupomCallback) (PCHAR Observacao,int IndiceBMP);


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;


typedef PCHAR (*GetKeyCallback) (void);


typedef void (*IntArgumentCallback) (int value);


typedef void (*NoArgumentCallback) (void);


typedef BOOL (*OnErrorCallback) (void);


typedef BOOL (*OnErrorRelatorioCallback) (int Indice);


typedef BOOL (*OnMsgRetentarCallback) (PCHAR Mensagem,PCHAR Situacao);


typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;


typedef void (*SangriaSuprimentoCallback) (double Valor,PCHAR Obs,PCHAR DescricaoCNF,PCHAR DescricaoFPG);


typedef void (*StringCallback) (PCHAR Mensagem);


typedef void (*SubtotalizaCupomCallback) (double DescontoAcrescimo,PCHAR MensagemRodape);


typedef void (*VendeItemCallback) (PCHAR Codigo,PCHAR Descricao,PCHAR AliquotaICMS,double Qtd,double ValorUnitario,double ValorDescontoAcrescimo,PCHAR Unidade,PCHAR TipoDescontoAcrescimo,PCHAR DescontoAcrescimo);

DllImport int ECF_AbreGaveta(const INTPTR ecfHandle);

DllImport int ECF_AcharECF(const INTPTR ecfHandle, const BOOL Modelo, const BOOL Porta, const int TimeOut);

DllImport int ECF_AcharPorta(const INTPTR ecfHandle, const int TimeOut);

DllImport int ECF_Ativar(const INTPTR ecfHandle);

DllImport int ECF_CorrigeEstadoErro(const INTPTR ecfHandle, const BOOL reducaoZ);

DllImport int ECF_Create(INTPTR* ecfHandle);

DllImport int ECF_Desativar(const INTPTR ecfHandle);

DllImport int ECF_Destroy(INTPTR* ecfHandle);

DllImport int ECF_EnviaComando(const INTPTR ecfHandle, const PCHAR cmd, const int timeout, PCHAR buffer, const int bufferlen);

DllImport int ECF_GetAbout(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetAguardaImpressao(const INTPTR ecfHandle);

DllImport int ECF_GetAguardandoResposta(const INTPTR ecfHandle);

DllImport int ECF_GetArqLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetArredondaItemMFD(const INTPTR ecfHandle);

DllImport int ECF_GetArredondaPorQtd(const INTPTR ecfHandle);

DllImport int ECF_GetAtivo(const INTPTR ecfHandle);

DllImport int ECF_GetColunas(const INTPTR ecfHandle);

DllImport int ECF_GetComandoEnviado(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComandoLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataHora(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetIgnorarTagsFormatacao(const INTPTR ecfHandle);

DllImport int ECF_GetMaxLinhasBuffer(const INTPTR ecfHandle);

DllImport int ECF_GetModelo(const INTPTR ecfHandle);

DllImport int ECF_GetModeloStr(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPaginaDeCodigo(const INTPTR ecfHandle);

DllImport int ECF_GetRespostaComando(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRFDID(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetUltimoErro(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_MudaArredondamento(const INTPTR ecfHandle, const BOOL arredonda);

DllImport int ECF_MudaHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_PreparaTEF(const INTPTR ecfHandle);

DllImport int ECF_Sangria(const INTPTR ecfHandle, const double valor, const PCHAR obs, const PCHAR DescricaoCNF, const PCHAR DescricaoFPG, const int indicebmp);

DllImport int ECF_SetAguardaImpressao(const INTPTR ecfHandle, const BOOL aguardaImpressao);

DllImport int ECF_SetArqLOG(const INTPTR ecfHandle, const PCHAR arqLog);

DllImport int ECF_SetArredondaItemMFD(const INTPTR ecfHandle, const BOOL arredonda);

DllImport int ECF_SetArredondaPorQtd(const INTPTR ecfHandle, const BOOL arredonda);

DllImport int ECF_SetComandoLOG(const INTPTR ecfHandle, const PCHAR comandoLog);

DllImport int ECF_SetIgnorarTagsFormatacao(const INTPTR ecfHandle, const BOOL ignorar);

DllImport int ECF_SetMaxLinhasBuffer(const INTPTR ecfHandle, const int maxLinhas);

DllImport int ECF_SetModelo(const INTPTR ecfHandle, const int modelo);

DllImport int ECF_SetPaginaDeCodigo(const INTPTR ecfHandle, const int pagina);

DllImport int ECF_Suprimento(const INTPTR ecfHandle, const double valor, const PCHAR obs, const PCHAR DescricaoCNF, const PCHAR DescricaoFPG, const int indicebmp);

DllImport int ECF_TestaPodeAbrirCupom(const INTPTR ecfHandle);